objects/GBLite__GB_User_Filter_Settings__c.object
<CustomObject>
    <description>Stores user defined settings for GridBuddy application.</description>
    <fields>
        <fullName>GBLite__Advanced_Filter_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Advanced Filter 1</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__Advanced_Filter_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Advanced_Filter_2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__Advanced_Filter_3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Advanced_Filter_3</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__FilterField_1a__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FilterField_1a</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__FilterField_1b__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FilterField_1b</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__FilterField_1c__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FilterField_1c</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__FilterField_1d__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FilterField_1d</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__FilterField_1e__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FilterField_1e</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__FilterField_2a__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FilterField_2a</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__FilterField_2b__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FilterField_2b</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__FilterField_2c__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FilterField_2c</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__FilterField_2d__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FilterField_2d</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__FilterField_2e__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FilterField_2e</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__FilterField_3a__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FilterField_3a</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__FilterField_3b__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FilterField_3b</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__FilterField_3c__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FilterField_3c</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__FilterField_3d__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FilterField_3d</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__FilterField_3e__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FilterField_3e</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__FilterOperator_1a__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FilterOperator_1a</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__FilterOperator_1b__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FilterOperator_1b</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__FilterOperator_1c__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FilterOperator_1c</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__FilterOperator_1d__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FilterOperator_1d</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__FilterOperator_1e__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FilterOperator_1e</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__FilterOperator_2a__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FilterOperator_2a</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__FilterOperator_2b__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FilterOperator_2b</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__FilterOperator_2c__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FilterOperator_2c</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__FilterOperator_2d__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FilterOperator_2d</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__FilterOperator_2e__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FilterOperator_2e</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__FilterOperator_3a__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FilterOperator_3a</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__FilterOperator_3b__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FilterOperator_3b</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__FilterOperator_3c__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FilterOperator_3c</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__FilterOperator_3d__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FilterOperator_3d</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__FilterOperator_3e__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FilterOperator_3e</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__FilterValue_1a__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FilterValue_1a</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GBLite__FilterValue_1b__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FilterValue_1b</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GBLite__FilterValue_1c__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FilterValue_1c</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GBLite__FilterValue_1d__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FilterValue_1d</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GBLite__FilterValue_1e__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FilterValue_1e</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GBLite__FilterValue_2a__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FilterValue_2a</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GBLite__FilterValue_2b__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FilterValue_2b</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GBLite__FilterValue_2c__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FilterValue_2c</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GBLite__FilterValue_2d__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FilterValue_2d</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GBLite__FilterValue_2e__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FilterValue_2e</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GBLite__FilterValue_3a__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FilterValue_3a</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GBLite__FilterValue_3b__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FilterValue_3b</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GBLite__FilterValue_3c__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FilterValue_3c</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GBLite__FilterValue_3d__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FilterValue_3d</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GBLite__FilterValue_3e__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FilterValue_3e</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GBLite__Filter_By_Ownership_1__c</fullName>
        <defaultValue>&quot;All Records&quot;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Filter By Ownership 1</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__Filter_By_Ownership_2__c</fullName>
        <defaultValue>&quot;All Records&quot;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Filter By Ownership 2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__Filter_By_Ownership_3__c</fullName>
        <defaultValue>&quot;All Records&quot;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Filter By Ownership 3</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__Limit_Object_1__c</fullName>
        <label>Limit Object 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GBLite__Limit_Object_2__c</fullName>
        <label>Limit Object 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GBLite__Limit_Object_3__c</fullName>
        <label>Limit Object 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GBLite__Order_By_Field_1a__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Order By Field 1</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__Order_By_Field_2a__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Order By Field 2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__Order_By_Field_3a__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Order By Field 3</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__Sort_Order_1a__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sort Order 1</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__Sort_Order_2a__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sort Order 2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__Sort_Order_3a__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sort Order 3</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>GB User Filter Settings</label>
    <listViews>
        <fullName>GBLite__All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>GB User Filter Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GB User Filter Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>